compiler/tools/fpp-check/test/instance_spec/undef_instance.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/instance_spec/undef_instance.fpp:3.12
  instance c
           ^
error: symbol c is not defined
note: looking for a port interface instance here
